Fixed spacing and fonts

--- a/AssetDeclarationsUI/src/app/app.component.scss
+++ b/AssetDeclarationsUI/src/app/app.component.scss
@@ -20,6 +20,7 @@
 
 a {
   margin: 4px 20px;
+  font-size: 16px;
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.05);
