--- a/AssetDeclarationsUI/src/app/pages/home/home.component.scss
+++ b/AssetDeclarationsUI/src/app/pages/home/home.component.scss
@@ -1,3 +1,8 @@
+main
+{
+  margin-top: 16px;
+}
+
 .search-container {
   display: flex;
   align-items: top;
